<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#acf1f1f1"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_camera_enhance_white_24dp" />

        <RelativeLayout
            android:layout_marginTop="42dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/im_email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_email_white_24dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/im_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/im_lock"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_lock_open_white_24dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/im_lock"
                android:hint="@string/lock"
                android:inputType="textPassword"/>
        </RelativeLayout>

        <Button
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFF96820"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_marginTop="46dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF3C5A98">

            <ImageView
                android:id="@+id/im_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_facebook" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/im_facebook"
                android:background="#FF3C5A98"
                android:gravity="center|left"
                android:text="@string/signInFace"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF1DB2E9">

            <ImageView
                android:id="@+id/im_twiter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_twitter" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/im_twiter"
                android:background="#FF1DB2E9"
                android:gravity="center|left"
                android:text="@string/signInTwitter"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:layout_marginTop="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="#FFFFFF"
                android:id="@+id/tv_forgotpass"
                android:text="@string/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="#FFFFFF"
                android:layout_toRightOf="@id/tv_forgotpass"
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_newhere"
                android:text="@string/newHer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>