<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aad1d1d1"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_instagam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/insta"
            android:textColor="@android:color/white"
            android:textSize="24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="#FF3C56A0">

            <ImageView
                android:id="@+id/imFace"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_facebook" />

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imFace"
                android:background="#FF3C56A0"
                android:text="@string/resgisterFace"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_chevron_right_white_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="#FF3C56A0">

            <ImageView
                android:id="@+id/imAdd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_black_24dp" />

            <Button
                android:id="@+id/btn_btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imAdd"
                android:background="#FF3C56A0"
                android:text="@string/resgisterEmail"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_chevron_right_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="#FF3C56A0">

            <ImageView
                android:id="@+id/imFace1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_perm_identity_black_24dp" />

            <Button
                android:gravity="center|left"
                android:id="@+id/btn_btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imFace1"
                android:background="#FF3C56A0"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_chevron_right_black_24dp" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>